# PaddleFL

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  README_cn.md  requirements.txt  setup.py
cmake/: generic.cmake  hiredis.cmake  third_party.cmake
contrib/data_safety_training/image_classification/: README.md  submitter.py
contrib/model_inversion_attack/dlg/: README.md  mnist_example.py
core/: README.md
core/common/: CMakeLists.txt  aes.cc  aes.cu  aes.cu.h  aes.h  aes.tab  aes_test.cc  aes_test.cu  crypto.h  crypto_test.cc  functor.h  naorpinkas_ot.cc  naorpinkas_ot.h  ot_extension.h  ot_extension_impl.h  ot_test.cc  paddle_tensor.cc  paddle_tensor.cu  paddle_tensor.h  paddle_tensor_factory.cu.h  paddle_tensor_impl.cu  paddle_tensor_impl.cu.h  paddle_tensor_impl.h  paddle_tensor_test.cc  paddle_tensor_test.cu  prng.cc  prng.cu  prng.cu.h  prng.h  prng_test.cu  rand_utils.cc  rand_utils.h  sse_transpose.cc  sse_transpose.h  tensor_adapter.h  tensor_adapter_factory.cc  tensor_adapter_factory.h  type_utils.h  utils.h
core/he/: CMakeLists.txt  he_utils.cc  paillier.cc
core/paddle_encrypted/data_utils/: data_utils.cc
core/paddlefl_mpc/data_utils/: CMakeLists.txt  data_utils.cc  data_utils.cu
core/paddlefl_mpc/mpc_protocol/: CMakeLists.txt  abstract_context.cc  abstract_context.cu  abstract_context.h  abstract_context_impl.h  abstract_network.h  aby3_operators.cc  aby3_operators.cu  aby3_operators.h  aby3_operators_impl.h  aby3_protocol.cc  aby3_protocol.cu  aby3_protocol.h  context_holder.cc  context_holder.h  mesh_network.cc  mesh_network.h  mesh_network_test.cc  mpc_config.h  mpc_config_parameters.cc  mpc_instance.cc  mpc_instance.h  mpc_instance_test.cc  mpc_operators.h  mpc_protocol.h  mpc_protocol_factory.cc  mpc_protocol_factory.cu  mpc_protocol_factory.h  mpc_protocol_test.cc  privc_operators.h  privc_protocol.cc  privc_protocol.h
core/paddlefl_mpc/mpc_protocol/aby3_operators_impl/: common.cc  common.cu  common.cu.h  common.h  elementwise_add_op.cc  elementwise_add_op.h  elementwise_op.cc  elementwise_op.cu  elementwise_op.h  elementwise_sub_op.h  matrix_op.cc  matrix_op.cu  matrix_op.h
core/paddlefl_mpc/mpc_protocol/network/: cuda_copy_network.h  mesh_network.cc  mesh_network.h  mesh_network_grpc.cc  mesh_network_grpc.h  mesh_network_grpc_test.cc  mesh_network_test.cc  nccl_network.h  network_factory.cc  network_factory.h
core/paddlefl_mpc/mpc_protocol/network/protos/: transport.proto
core/paddlefl_mpc/mpc_protocol/privc_operators_impl/: common.h  elementwise_op.cc  elementwise_op.h  matrix_op.cc  matrix_op.h
core/paddlefl_mpc/operators/: CMakeLists.txt  conv_op.cc  conv_op.cu  conv_op.h  mpc_adam_op.cc  mpc_adam_op.cu  mpc_adam_op.h  mpc_batch_norm_op.cc  mpc_batch_norm_op.cu  mpc_batch_norm_op.h  mpc_compare_op.cc  mpc_compare_op.h  mpc_elementwise_add_op.cc  mpc_elementwise_add_op.h  mpc_elementwise_mul_op.cc  mpc_elementwise_mul_op.h  mpc_elementwise_sub_op.cc  mpc_elementwise_sub_op.cu  mpc_elementwise_sub_op.h  mpc_gru_op.cc  mpc_gru_op.h  mpc_init_op.cc  mpc_lookup_table_v2_op.cc  mpc_lookup_table_v2_op.h  mpc_mean_normalize_op.cc  mpc_mean_normalize_op.h  mpc_mean_op.cc  mpc_mean_op.h  mpc_mul_op.cc  mpc_mul_op.h  mpc_op.h  mpc_pool_op.cc  mpc_pool_op.cu  mpc_pool_op.h  mpc_relu_op.cc  mpc_relu_op.h  mpc_reveal.cc  mpc_reveal_op.h  mpc_scale_op.cc  mpc_scale_op.h  (+14 more)
core/paddlefl_mpc/operators/math/: concat_and_split.cc  concat_and_split.h  elementwise_op_function.h  im2col.cc  im2col.cu  math_function.cc  math_function.h  math_function_impl.h  sequence2batch.cc  sequence2batch.h  vol2col.cc
core/paddlefl_mpc/operators/metrics/: precision_recall_op.cc  precision_recall_op.h
core/privc/: CMakeLists.txt  bit.cc  bit.h  bit.h.bak  common.h  common_utils.cc  common_utils.h  crypto.cc  crypto.h  crypto_test.cc  fixed_point.h  fixedpoint_tensor.h  fixedpoint_tensor_gc_imp.h  fixedpoint_tensor_imp.h  fixedpoint_tensor_test.cc  fixedpoint_util.h  fixedpoint_util_test.cc  gc_bit.cc  gc_bit.h  gc_fixed_point.h  gc_fixedpoint_tensor.h  gc_fixedpoint_tensor_imp.h  gc_integer.cc  gc_integer.h  he_triplet.h  he_triplet_impl.h  he_triplet_test.cpp  integer.cc  integer.h  ot.cc  ot.h  privc_bit_test.cc  privc_context.cc  privc_context.h  privc_fixedpoint_test.cc  privc_gc_bit_test.cc  privc_gc_fixedpoint_test.cc  privc_gc_integer_test.cc  privc_gc_test.cc  privc_integer_test.cc  (+6 more)
core/privc3/: CMakeLists.txt  README.md  aby3_context.h  aes.cc  aes.h  boolean_tensor.h  boolean_tensor_impl.h  boolean_tensor_test.cc  circuit_context.h  fixedpoint_tensor.h  fixedpoint_tensor_imp.cu.h  fixedpoint_tensor_imp.h  fixedpoint_tensor_test.cc  fixedpoint_tensor_test.cu  fixedpoint_util.h  fixedpoint_util_test.cc  ot.h  paddle_tensor.cc  paddle_tensor.h  paddle_tensor_impl.cu  paddle_tensor_impl.cu.h  paddle_tensor_impl.h  paddle_tensor_test.cc  paddle_tensor_util.h  prng.cc  prng.h  prng_utils.h  rand_utils.cc  rand_utils.h  tensor_adapter.h  tensor_adapter_factory.cc  tensor_adapter_factory.h
core/psi/: CMakeLists.txt  aes.cc  aes.h  aes_test.cc  cuckoo_hash.cc  cuckoo_hash.h  naorpinkas_ot.cc  naorpinkas_ot.h  net_io.h  ot_extension.h  ot_extension_impl.h  ot_test.cc  prng.cc  prng.h  psi.cc  psi.h  psi_api.cc  psi_api.h  psi_api_test.cc  psi_test.cc  rand_utils.cc  rand_utils.h  sse_transpose.cc  sse_transpose.h  utils.h
core/testing/: CMakeLists.txt  paddle_mpc_gtest_main.cc
docker/: Dockerfile  README.md
docs/: requirements.txt
docs/source/: compile_and_intall.rst  conf.py  data_parallel_instruction.rst  index.rst  instruction.rst  mpc_instruction.rst  reference.rst  team.rst
docs/src/: conf.py  index.rst  instruction.rst  team.rst
feature/he/: CMakeLists.txt  paillier.h
feature/proto/: metrics.proto  run_protogen.py
feature/python/: __init__.py
paddle_fl/: __init__.py  version.py
paddle_fl/core/: __init__.py
paddle_fl/dataset/: femnist.py
paddle_fl/reader/: __init__.py  gru4rec_reader.py
paddle_fl/tests/: test_fl_agent.py
python/: setup.py  version.py
python/paddle_fl/: README.md  __init__.py
(+687 files in other folders)
