file(GLOB DIR_SRCS "./*.cc")
file(GLOB MATH_SRCS "./math/*.cc")
file(GLOB METRICS_SRCS "./metrics/*.cc")
add_library(mpc_ops_o OBJECT ${DIR_SRCS} ${MATH_SRCS} ${METRICS_SRCS})
add_dependencies(mpc_ops_o fluid_framework gloo)

if (WITH_GPU)
    file(GLOB DIR_SRCS_CU "./*.cu" "./math/*.cu")
    cuda_add_library(mpc_ops_cu SHARED ${DIR_SRCS_CU})
    add_dependencies(mpc_ops_cu fluid_framework gloo)
endif()
